src/css/about.css
.subheadings {
    font-size: 3.5rem;
      font-weight:500;
      white-space: nowrap;
}

.aboutWrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 2rem;
}

.aboutHeader {
  width: 100%;
  height: 20vh;
  box-sizing: border-box;
  padding: 1.5rem 2rem;
  text-align: center;

}

.aboutContent {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: 2rem;
  padding: 2rem;
}

.aboutText {
font-size: 1.4rem;
  flex: 1 0 0;
max-width: 60%;
line-height: 2rem;
}

.aboutImage {
  width: 30%;
  margin-left: 5vw;
  flex-shrink: 0;
  border-radius: 8px;
  object-fit: cover;
}

@media (max-width: 830px) {
  .aboutContent {
    flex-direction: column;
    padding: 1.25rem;
  }

  .aboutHeader {
    padding: 1.25rem;
  }

  .aboutText {
    width: 100%;
    max-width: 100%;
  }

  .aboutImage {
    width: 100%;
      margin-left: 0;
  }
}

